# med-wallet

./: .env  .gitignore  Cargo.toml  README.md  app.json  build_libfheenc.sh  package-lock.json  package.json
android/: .project  settings.gradle
android/app/: .project  build.gradle
android/app/src/debug/java/com/medwalletapp/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/medwalletapp/: MainActivity.java  MainApplication.java  RustBridgeModule.java  RustModulePackage.java
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/medwalletapp/: ReactNativeFlipper.java
app/models/: Document.test.ts  Document.ts  index.ts
app/navigators/: AppNavigator.tsx
app/screens/: DemoCommunityScreen.tsx  DocExplorerScreen.tsx  index.ts
app/services/api/: api.ts
app/utils/: rustModule.ts
ios/: Podfile
ios/MedwalletApp/: Info.plist
ios/MedwalletApp.xcodeproj/: project.pbxproj
ios/MedwalletApp.xcodeproj/xcshareddata/xcschemes/: MedwalletApp.xcscheme
libenc/: Cargo.toml  Makefile  com_medwalletapp_RustBridgeModule.h  raven.txt
libenc/com/medwalletapp/: RustBridgeModule.java
libenc/src/: enc.rs  lib.rs
migrations/: 20231111154451_patient_table.down.sql  20231111154451_patient_table.up.sql  20231114162015_documents.down.sql  20231114162015_documents.up.sql
server/: Cargo.toml
server/src/: files.rs  main.rs  users.rs
src/: files.rs  lib.rs  main.rs  upload.rs  user.rs
