[package]
name = "fhe_enc"
version = "0.1.0"
edition = "2021"

[lib]
name = "fhe_enc"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.75"
hex = "0.4.3"
jni = "0.21.1"                                    # Rust bindings to the JNI
rand = "0.8.5"
ring = { version = "0.17.7", features = ["std"] }
